--- a/apps/layout-demo/src/app/pages/camera/camera.component.html
+++ b/apps/layout-demo/src/app/pages/camera/camera.component.html
@@ -1,30 +1,29 @@
-<div class="camera-container">
+<div class="camera-view-wrapper">
+    <div class="camera-container">
 
-    <img #livecam [src]="'assets/images/resimyok.jpg'" width="150" height="150" alt="Kamera Görüntüsü" />
+        <div class="camera-status" [attr.data-state]="state$()">
+            <span class="status-dot"></span>
+            {{ state$() }}
+        </div>
 
-    <canvas #cameraCanvas class="camera-canvas"></canvas>
-    <canvas #overlayCanvas class="overlay-canvas"></canvas>
+        <img #livecam class="camera-frame" [src]="'assets/images/resimyok.jpg'" alt="Kamera Görüntüsü" />
 
-    <!-- <div class="camera-status" [ngClass]="state$ | async">
-        {{ state$ | async }}
-    </div> -->
+        <!-- <canvas #cameraCanvas class="camera-canvas"></canvas> -->
+        <canvas #overlayCanvas class="overlay-canvas"></canvas>
 
+    </div>
+
+    <div class="controls-container">
+
+        <button class="cameraicons foto-check-btn" type="button"
+            (click)="addCameraImageToParentItem(FaceDetectionEnums.UserTake)">
+            <img #fotoImg [src]="'assets/images/foto-check.png'" alt="Fotoğraf Çek">
+            <span class="hover-text">Resim Çek</span>
+        </button>
+        <button class="cameraicons refresh-btn" type="button" (click)="restartDetection()">
+            <img [src]="'assets/images/refresh.png'" alt="Yeniden Başlat">
+            <span class="hover-text">Yüz Tanıma Yeniden Başlat</span>
+        </button>
+
+    </div>
 </div>
-
-<div class="camera-controls">
-
-    <!-- <button type="button" class="camera-btn primary" (click)="capture()">
-        📷
-        <span>Resim Çek</span>
-    </button>
-
-    <button type="button" class="camera-btn secondary" (click)="restart()">
-        🔄
-        <span>Yeniden Başlat</span>
-    </button> -->
-
-</div>
-
-<!-- <div class="camera-message-area">
-    {{ message$ | async }}
-</div> -->
